--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,9 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
     <!--
+      
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -32,7 +34,7 @@
     rel="stylesheet">
 
     <!-- Css Styles -->
-    <link rel="stylesheet" href="../src/components/cssComponent/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="../src/HTMLcomponents/cssComponent/bootstrap.min.css" type="text/css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
